feat(frontend): get direct bytebuffer address by reflection (#580)
Signed-off-by: Robin Han <hanxvdovehx@gmail.com>